Remove test code and fix border layout shift on tab

--- a/src/MegaMenuSection.css
+++ b/src/MegaMenuSection.css
@@ -43,38 +43,6 @@ ilw-header-megamenu-section[linked][aria-current="page"] a[slot="link"] {
 }
 
 ilw-header-megamenu-section {
-
-  
-    /* span[slot="action"].span-2{
-        grid-column: 3 / span 2;
-    }
-   span[slot="action"].span-3{
-        grid-column: 2 / span 3;
-    }
-
-    span[slot="action"].span-2 img:first-of-type, span[slot="action"].span-3 img:first-of-type {
-        width: 90%;          
-        margin: 30px; 
-    } */
-
-
-
-    /* span[slot="action-right"] {
-        margin: auto;
-        position: relative;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-    } */
-
-    /* span[slot="action-right"] *, span[slot="action-left"] *{
-        display: none;
-    } */
-
-    
-
    
 
     img{
@@ -168,9 +136,9 @@ ilw-header-megamenu-section {
                 --ilw-header-megamenu--link-border-left-highlight: 4px solid transparent;
                 --ilw-header-megamenu--link-border-left-highlight--hover: 4px solid var(--il-orange);
                 --ilw-header-megamenu--link-border-left-highlight--focus: 4px solid var(--il-blue);
-                --ilw-header-megamenu--link-border-bottom-highlight: initial;
+                --ilw-header-megamenu--link-border-bottom-highlight: 4px solid transparent;;
                 --ilw-header-megamenu--link-border-bottom-highlight--focus: initial;
-                --ilw-header-megamenu--link-border-bottom-highlight--hover: initial;
+                --ilw-header-megamenu--link-border-bottom-highlight--hover: 4px solid transparent;;
             
                 all: initial;
                 box-sizing: border-box;
@@ -236,28 +204,12 @@ ilw-header-megamenu[compact] ilw-header-megamenu-section {
                   border-left: var(--ilw-header-megamenu--link-border-left-highlight--focus);
                 }
             }
-    /* span[slot="action"]{
-            grid-column: auto;
-            height: auto;
-    }
-    span[slot="action"] button{
-        margin-bottom: 20px;
-    }
-    
-    span[slot="action"].span-3 img, span[slot="action"].span-2 img, span[slot="action"] img {
-        margin: auto 0;
-        width: 100%;
-        height: 100%;
-    } */
 
     span[slot="action-left"] {
         display: block;
         min-height: 250px;
     }
 
-    span[slot="action-left"] * {
-       
-    }
 
     img{
         display: none;
