--- a/src/MegaMenuSection.styles.css
+++ b/src/MegaMenuSection.styles.css
@@ -212,43 +212,3 @@ div.list-wrapper{
 ::slotted([slot="action-left"].span-3) {
   grid-column: 1 / span 3; 
 }
-
-
-
-
-
-
-    /* div ul:nth-child(n + 5), div img:nth-child(n + 5), div span:nth-child(n + 5),  > ul > li > ul{
-            display: none;
-        } */
-
-      /* div{
-        display: grid;
-        grid-template-columns: repeat(4, minmax(0,320px));
-        max-width: 100vw;
-        grid-auto-flow: column;
-         ul{
-            border-left: solid 2px var(--il-storm-85, #d5d3d3);
-         }
-            ul:first-child{
-            border: none;
-         }
-        ul{
-            display: block;
-        
-            li {
-                border-right: none;                        
-
-                ul{
-                    margin-top: 0;
-                    margin-bottom: 0;
-                    border: none;
-
-                    li{
-                        border-right: none;                        
-                    }
-                }     
-            }
-            
-        }
-    } */
